--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Frontend Mentor | Stats preview card component</title>
   </head>
   <body class="grid min-h-screen place-content-center p-4 md:p-8">
-    <main class="flex flex-col items-center gap-[1.0625rem]">
+    <main class="flex flex-col items-center gap-[1.0625rem]"  style="margin-top: 20px;">
       <h1
         class="text-[2.25rem] font-extralight text-center max-w-[25ch] tracking-[0.004em] leading-[1.45] text-very-dark-blue"
       >
@@ -32,7 +32,7 @@
         <span class="text-[2.25rem] font-semibold">Powered by Technology </span>
       </h1>
       <p
-        class="leading-[1.5625rem] text-center tracking-[0.007em] text-grayish-blue max-w-[55ch]"
+        class="leading-[1.5625rem] text-center tracking-[0.007em] text-grayish-blue max-w-[59ch]"
       >
         Our Artificial Intelligence powered tools use millions of project data
         points to ensure that your project is successful
